show eyebow parent page link in data template correctly and account for ungrid shift in js

--- a/themes/shiro/assets/src/sass/css/scss/objects/_header.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_header.scss
@@ -546,7 +546,8 @@ $header-bp-mw: 1049px;
     background: transparent;
 }
 
-// TODO: Fix for use beyond transparency report and campaign pages
+// TODO: Fix for use beyond transparency report and campaign pages and data page template with a parent 
+.page-template-page-data.page-child,
 .page-id-61699,
 .page-id-62419 {
     .header-content {
