--- a/themes/shiro/assets/src/sass/css/scss/objects/_modules.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_modules.scss
@@ -465,6 +465,7 @@ a.hover-img-zoom {
 	@include paddingTop(64, 112, $medium-bp);
 }
 
+.data-ungrid,
 .framing-copy-ungrid {
 	margin-bottom: 6rem;
 
